# MicroModel

./: CMakeLists.txt  README.md  main.cpp
Bus/: Bus.cpp  Bus.hpp  CMakeLists.txt  IBusDevice.hpp
CPU/: CMakeLists.txt  CPU_4004.cpp  CPU_4004.hpp  ICPUDevice.hpp
IO/: CMakeLists.txt  SerialDevice.cpp  SerialDevice.hpp
Memory/: BIOSDevice.cpp  BIOSDevice.hpp  CMakeLists.txt  RAMDevice.cpp  RAMDevice.hpp
MicroVM/: CMakeLists.txt  MicroVM.cpp  MicroVM.hpp
tests/: CMakeLists.txt  test_bus.cpp  test_cpu.cpp  test_ram.cpp
